Fix nav bar spacing issues

--- a/projects/ccf-rui/src/app/modules/content/stage-nav/stage-nav.component.scss
+++ b/projects/ccf-rui/src/app/modules/content/stage-nav/stage-nav.component.scss
@@ -6,15 +6,15 @@
 
   .view-slider {
     margin-left: -1rem;
-    margin-bottom: .5rem;
+    margin-bottom: 1.5rem;
   }
 
   .input-group {
     margin-right: 1.5rem;
-    margin-bottom: .5rem;
 
     .nav-input {
       margin-right: 1.5rem;
+      margin-bottom: 1.5rem;
     }
   }
 }
